@@ -5,6 +5,7 @@
 
 \name{timezones}
 \alias{Sys.timezone}
+\alias{OlsonNames}
 \alias{timezone}
 \alias{time zone}
 \alias{time zones}
@@ -18,8 +19,17 @@
   Information about time zones in \R.  \code{Sys.timezone} returns
   the current time zone.
 }
+
 \usage{
-Sys.timezone()
+Sys.timezone(location = FALSE)
+
+OlsonNames()
+}
+
+\arguments{
+  \item{location}{logical: should an attempt be made to find the
+    location name as per the Olson database?  (See \sQuote{Time zone
+      names} below.)}
 }
 
 \details{
@@ -29,14 +39,16 @@ Sys.timezone()
   with \R on Windows.
 
   It is not in general possible to retrieve the system's own name(s) for
-  the current timezone, but \code{Sys.timezone} will retrieve the name
-  it uses for the current time (and the name may differ depending on
-  whether daylight saving time is in effect).  (Some hints for retrieving
-  the name from a Unix-alike OS are in the examples.)
+  the current timezone.  By default \code{Sys.timezone} will retrieve
+  the name it uses for the current time (and the name may differ
+  depending on whether daylight saving time is in effect).
 
   On almost all platforms it is possible to set the time zone via the
   environment variable \env{TZ}: see the section on \sQuote{Time zone
-    names} for suitable values.
+  names} for suitable values.  \code{Sys.timezone(TRUE)} will return the
+  value if set (and on some OSes it is always set), otherwise it will
+  try to retrieve a value which if set for \env{TZ} would give the
+  current timezone.
 
   Note that the principal difficulty with time zones is their individual
   history: over the last 100 years places have changed their affiliation
@@ -71,7 +83,12 @@ Sys.timezone()
 
 \value{
   \code{Sys.timezone} returns an OS-specific character string, possibly
-  an empty string.  Typically this is an abbreviation such as \code{"EST"}.
+  an empty string.  Typically this is an abbreviation such as
+  \code{"EST"}.  For \code{location = TRUE} on Windows and many
+  Unix-alike OSes this will be a location such as
+  \code{"Europe/London"}.
+
+  \code{OlsonNames} returns a character vector.
 }
 
 \section{Time zone names}{
@@ -99,22 +116,24 @@ Sys.timezone()
   details and references.  By convention, regions with a unique timezone
   history since 1970 have specific names, but those with different
   earlier histories may not.
+
+  The function \code{OlsonNames} returns the names known to the Olson
+  database on the current system.
 #ifdef unix
 
-  For most Unix-alikes use the Olson database.  The system-specific
-  default location in the file system varies, e.g.
-  \file{/usr/share/zoneinfo} (Linux, OS X, FreeBSD),
-  \file{/usr/share/lib/zoneinfo} (Solaris, AIX), \file{/etc/zoneinfo},
-  \ldots.  It is likely that there is a file \file{zone.tab} under that
-  directory listing the locations known as time-zone names (but not for
-  example \code{EST5EDT}).  See also
-  \url{http://en.wikipedia.org/wiki/Zone.tab}.
+  Most Unix-alikes use the Olson database.  The system-specific default
+  location in the file system varies, e.g.  \file{/usr/share/zoneinfo}
+  (Linux, OS X, FreeBSD), \file{/usr/share/lib/zoneinfo} (Solaris, AIX),
+  \file{/etc/zoneinfo}, \ldots.  It is likely that there is a file named
+  something like \file{zone.tab} under that directory listing the
+  locations known as time-zone names (but not for example
+  \code{EST5EDT}).  See also \url{http://en.wikipedia.org/wiki/Zone.tab}.
 #endif
 #ifdef windows
 
   \R under Windows uses the Olson database.  The current version of the
   database will be given in file
-  \file{\var{\link{R_HOME}}\\share\\zoneinfo\\VERSION}.
+  \file{\var{\link{R_HOME}}\\share\\zoneinfo}.
   Environment variable \env{TZDIR} can be used to point to a later
   \file{zoneinfo} directory.  A file listing most known time zones can be
   found at \file{\var{\link{R_HOME}}\\share\\zoneinfo\\zone.tab} (see
@@ -150,43 +169,11 @@ Sys.timezone()
   \url{http://www.twinsun.com/tz/tz-link.htm} for extensive sets of links.
 }
 
-% suggested locations include those from libical sources.
-% zone_sun.tab is not quite the same format: has a "-" column before comments
 \examples{
 Sys.timezone()
+Sys.timezone(location = TRUE)
 
-#ifdef windows
-tzfile <- file.path(R.home("share"), "zoneinfo", "zone.tab")
-tzones <- read.delim(tzfile, row.names = NULL, header = FALSE,
-    col.names = c("country", "coords", "name", "comments"),
-    as.is = TRUE, fill = TRUE, comment.char = "#")
-str(tzones$name)
-#endif
-#ifdef unix
-## need to find a suitable file path (if any) for your system
-tzdirs <- c("/usr/share/zoneinfo", # Linux, OS X, FreeBSD
-            "/usr/lib/zoneinfo",   # early glibc
-            "/usr/share/lib/zoneinfo", # AIX?
-            "/etc/zoneinfo", "/usr/etc/zoneinfo")
-tzfiles <- c(file.path(tzdirs, "zone.tab"),
-            "/usr/share/lib/zoneinfo/tab/zone_sun.tab") # Solaris
-if (any(have <- file.exists(tzfiles))) {
-tzfile <- tzfiles[have][1]
-tzones <- read.delim(tzfile, row.names = NULL, header = FALSE,
-    col.names = c("country", "coords", "name", "comments"),
-    as.is = TRUE, fill = TRUE, comment.char = "#")
-str(tzones$name)
-}
-
-## Try to find the system's internal name for the current timezone.
-if(nzchar(lt <- Sys.getenv("TZ"))) { # always set on Solaris, AIX
-  print(lt)
-} else {
-  lt <- normalizePath("/etc/localtime") # Linux, OS X, ...
-  if (grepl(pat <- "^/usr/share/zoneinfo/", lt))
-     print(sub(pat, "", lt))
-}
-#endif
+str(OlsonNames()) ## typically several hundered names
 }
 \keyword{utilities}
 \keyword{chron}
